--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="container">
-    <h1>Hello</h1>
+    <h1 id="status">Refresh Me</h1>
     <div class="dice">
       <p>Player 1</p>
       <img class="img1" src="images/dice6.png">
