--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <script src="index.js" charset="utf-8"></script>
 </body>
 <footer>
-  www 🎲 App Brewery 🎲 com
+Credit to www🎲App Brewery🎲com || Created by Fitransyah
 </footer>
 
 </html>
