small fix for footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <script src="index.js" charset="utf-8"></script>
 </body>
 <footer>
-Credit to www🎲App Brewery🎲com || Created by Fitransyah
+Credit to : www🎲App Brewery🎲com
 </footer>
+<footer style="margin-top : 0.1%;"> Created by Fitransyah</footer>
 
 </html>
