small fix for footer, help the github deploymen to success

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   <script src="index.js" charset="utf-8"></script>
 </body>
 <footer>
-Credit to : www🎲App Brewery🎲com
+  <br>Credit to : www🎲App Brewery🎲com
+  <br>Created by Fitransyah
 </footer>
-<footer style="margin-top : 0.1%;"> Created by Fitransyah</footer>
-
 </html>
